<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HowToGetThere</string>
    <string name="action_info">Info</string>
    <string name="action_map_type">Map type</string>
    <string name="action_add_marker">Add marker</string>
    <string name="action_clear_map">Clear map</string>
    <string name="action_search">Search</string>
    <string name="from">From&#8230;</string>
    <string name="to">To&#8230;</string>
    <string name="input_location">Enter location&#8230;</string>
    <string name="info_text">How to get there? developed by @vicmonmena</string>
    <string name="maps_not_available">Maps not available!</string>
    <string name="empty_field">Please! Where is anywhere?</string>
    <string name="find_location">Click me to search</string>
    <string name="enter_locations">Please! Enter both locations first</string>
    <string name="trace_route">Trace route</string>
    <string name="tow_markers">Two markers needed at least!</string>
    <string name="coming_soon">Coming soon! Now do long click on map to create more markers</string>
    <string name="total_distance">Total distance of travel</string>
    <string name="distance_from">From</string>
    <string name="distance_to">to</string>
    <string name="distance_to_next_point">Distance to next point</string>
    <string name="activate_gps">Do you want to activate the GPS?</string>
    <string name="gps_disable_title">GPS disable</string>
    <string name="gps_disable">As you want, but we won\'t find you</string>
    
</resources>
