<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:id="@+id/searchLayoutFrom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	    <TextView
	        android:id="@+id/from_edit"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:gravity="center"
	        android:clickable="true"
	        android:hint="@string/from"
	        android:onClick="onFindLocationClick"
	        android:padding="3dp"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:singleLine="true"
	        android:ellipsize="end"/>
        <ImageView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_goto"
            android:contentDescription="@string/trace_route"
            android:gravity="center"
            android:padding="3dp"
            android:layout_weight="1"
            android:onClick="onTraceRouteClick"/>
	    <TextView
	        android:id="@+id/to_edit"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:gravity="center"
	        android:clickable="true"
	        android:hint="@string/to"
	        android:onClick="onFindLocationClick"
	        android:padding="3dp"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:singleLine="true"
	        android:ellipsize="end"/>
    </LinearLayout>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>
